--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -43,7 +43,7 @@ body:has(.menu.is-open) {
   width: 32px;
   height: 32px;
 
-  color: var(--color-white);
+  color: var(--color-grey);
   cursor: pointer;
 }
 
