--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -8,7 +8,7 @@
         onclick="toggleMenu();"
       >
         <svg class="close-btn-icon">
-          <use href="./img/icons/sprites.svg#close"></use>
+          <use href="./img/icons/sprites.svg#menu-close"></use>
         </svg>
       </button>
     </div>
