add footer html

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,39 @@
 <footer class="footer">
   <div class="container">
-    <p class="footer-desc">
-      Your Energy. All rights reserved.
-    </p>
+    <div class="footer-content">
+      <a class="footer-logo" href="./index.html" aria-label="Site logo">
+        <svg class="logo-svg">
+          <use href="./img/icons/sprites.svg#logo-light"></use>
+        </svg>
+      </a>
+
+      <!-- soc-list -->
+      <load src="partials/nav.html" />
+
+      <p>Transforming your <em>body</em> shape with us</p>
+
+      <p>Subscribe and learn about new exercises!</p>
+
+      <form class="footer-form">
+        <input type="email" placeholder="Email" required />
+        <button type="submit">Send</button>
+      </form>
+    </div>
+
+    <div class="footer-note">
+      <p class="footer-note-copyright">Your Energy. All rights reserved.</p>
+
+      <div class="footer-links">
+        <a class="footer-link" href="#" aria-label="Privacy Policy"
+          >Privacy Policy</a
+        >
+        /
+        <a class="footer-link" href="#" aria-label="Terms of Service"
+          >Terms of Service</a
+        >
+      </div>
+
+      <p>&copy;2023</p>
+    </div>
   </div>
 </footer>
