--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <a class="header-logo" href="./index.html" aria-label="Site logo">
       <svg class="logo-svg">
-        <use href="./img/icons/sprites.svg#logo"></use>
+        <use href="./img/icons/sprites.svg#logo-dark"></use>
       </svg>
     </a>
 
