--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,9 +7,9 @@
 
 /* Sections style */
 @import url('./header.css');
-@import url('./menu.css');
+/* @import url('./menu.css'); */
 @import url('./quotes.css');
 /* @import url('./hero.css'); */
 /* @import url('./main.css'); */
 @import url('./modal.css');
-@import url('./footer.css');
+/* @import url('./footer.css'); */
