--- a/src/partials/quotes.html
+++ b/src/partials/quotes.html
@@ -1,10 +1,14 @@
 <section class="quotes container">
   <!-- Quote -->
   <div class="quote-of-day container">
-    <div class="quote-icon-wrapper">
-      <svg class="quote-icon" width="32" height="32">
+    <div class="quote-icon-wrapper" width="32" height="32">
+      <svg class="quote-icon">
         <!-- Icon Runner -->
-        <use href="../img/icons/quote.svg#icon-runner"></use>
+        <use
+          href="../img/icons/sprites.svg#running-man"
+          width="20"
+          height="20"
+        ></use>
       </svg>
     </div>
     <div class="quote-wraper">
@@ -13,7 +17,7 @@
         <!-- <div class="quote-icon-wrapper"> -->
         <svg class="quote-icon" width="24" height="24">
           <!-- Icon Commas -->
-          <use href="../img/icons/quote.svg#icon-commas"></use>
+          <use href="../img/icons/sprites.svg#quotes"></use>
         </svg>
         <!-- </div> -->
       </div>
@@ -97,9 +101,9 @@
   <!-- News -->
   <div class="quote-news container">
     <div class="quote-icon-wrapper">
-      <svg class="quote-icon" width="32" height="32">
+      <svg class="quote-icon">
         <!-- Icon Gantel -->
-        <use href="../img/icons/quote.svg#icon-gantel"></use>
+        <use href="../img/icons/sprites.svg#dumbbell"></use>
       </svg>
     </div>
     <div class="quote-news-wraper">
