before socials change

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,23 +1,30 @@
 <footer class="footer">
   <div class="container">
     <div class="footer-content">
-      <a class="footer-logo" href="./index.html" aria-label="Site logo">
-        <svg class="logo-svg">
-          <use href="./img/icons/sprites.svg#logo-light"></use>
-        </svg>
-      </a>
+      <div class="footer-starter">
+        <a class="footer-logo" href="./index.html" aria-label="Site logo">
+          <svg class="logo-svg">
+            <use href="./img/icons/sprites.svg#logo-light"></use>
+          </svg>
+        </a>
 
-      <!-- soc-list -->
-      <load src="partials/nav.html" />
+        <!-- soc-list -->
+        <load src="partials/nav.html" />
+      </div>
 
-      <p>Transforming your <em>body</em> shape with us</p>
+      <p class="footer-cta-text">
+        Transforming your <em>body</em> shape with us
+      </p>
 
-      <p>Subscribe and learn about new exercises!</p>
-
-      <form class="footer-form">
-        <input type="email" placeholder="Email" required />
-        <button type="submit">Send</button>
-      </form>
+      <div class="subscription">
+        <p class="footer-subscribe-text">
+          Subscribe and learn about new exercises!
+        </p>
+        <form class="footer-form">
+          <input type="email" placeholder="Email" required />
+          <button type="submit">Send</button>
+        </form>
+      </div>
     </div>
 
     <div class="footer-note">
