--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,7 +1,3 @@
-.footer {
-  /* delete */
-  background-color: #bc5555;
-}
 .footer .nav-list {
   display: none;
 }
@@ -19,8 +15,8 @@
   justify-content: space-between;
   margin-bottom: 0;
 
-  /* background-color: var(--color-black); */
-  /* box-shadow: 0 0 0 100vmax var(--color-black); */
+  background-color: var(--color-black);
+  box-shadow: 0 0 0 100vmax var(--color-black);
   clip-path: inset(0 -100vmax -100vmax);
 }
 
@@ -29,19 +25,97 @@
 
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  /* gap: 40px; */
 
   align-items: start;
   justify-content: start;
 
   margin: 0;
   padding: 40px 0 120px;
+
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 64px 0;
+  }
 }
 
-.footer .footer-note {
+.footer-logo {
+  display: inline-block;
+  padding-bottom: 20px;
+}
+
+.footer .soc-list {
+  padding-bottom: 40px;
+  gap: 12px;
+}
+.footer .soc-link {
+  width: 24px;
+  height: 24px;
+}
+.footer .soc-link .icon {
+  width: 24px;
+  height: 24px;
+  fill: var(--color-grey);
+}
+.footer .soc-item:hover .icon,
+.footer .soc-item:focus .icon {
+  fill: var(--color-grey);
+}
+
+.footer-cta-text {
+  font-size: 38px;
+  line-height: 1.157;
+  letter-spacing: -0.02em;
+  padding-bottom: 20px;
+}
+
+.footer-subscribe-text {
+  font-size: 14px;
+  line-height: 1.285;
+  padding-bottom: 20px;
+}
+
+.footer-form input {
+  width: 100%;
+  padding: 12px 14px;
+  margin-bottom: 20px;
+  align-items: center;
+  border-radius: 30px;
+  border: 1px solid var(--color-grey);
+  background-color: var(--color-black);
+}
+
+.footer-form input::placeholder {
+  color: rgba(244, 244, 244, 0.6);
+  font-size: 14px;
+  line-height: 1.285;
+}
+
+.footer-form button {
+  width: 100%;
+  padding: 12px;
+  justify-content: center;
+  align-items: center;
+  color: var(--color-black);
+  background-color: var(--color-grey);
+  font-size: 14px;
+  line-height: 1.285;
+}
+
+.footer-note {
   color: #c6cdd1;
   font-size: 14px;
   line-height: 1.285;
   letter-spacing: 0.02em;
   opacity: 0.9;
+  display: flex;
+  flex-direction: raw;
+  row-gap: 10px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.footer-note-copyright {
+  /* flex-shrink: 1; */
+  /* width: 100%; */
 }
