--- a/src/css/quotes.css
+++ b/src/css/quotes.css
@@ -1,6 +1,12 @@
-@import url(./base.css);
+@import url(./styles.css);
 
 /* Загальні стилі */
+section {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
 .quotes .container {
   align-items: flex-start;
   background: var(--primary-color);
@@ -13,7 +19,6 @@
 .quote-news.container {
   background-color: #fff;
 }
-/* Стиль для блоку з цитатою */
 .quote-of-day,
 .quote-news {
   display: flex;
@@ -62,7 +67,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  gap: 16px;
+  /* gap: 16px; */
   position: relative;
 }
 
@@ -150,4 +155,50 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
+}
+
+@media (max-width: 1200px) {
+  .quotes.container {
+    flex-wrap: wrap;
+    justify-content: center;
+    flex: 1 1 calc(50%);
+  }
+
+  .quote-block,
+  .news-block {
+    max-width: 300px;
+    margin: 16px auto;
+    padding: 20px;
+  }
+  .quote-author {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 767px) {
+  .quotes .container {
+    padding: 16px;
+    max-width: 100%;
+  }
+  .quote-of-day,
+  .quote-news {
+    align-items: flex-start;
+    gap: 12px;
+    padding: 16px;
+    max-width: 100%;
+  }
+
+  .quote-text,
+  .quote-news-text {
+    width: 100%;
+  }
+
+  .quote-title,
+  .quote-news-title {
+    font-size: 18px;
+  }
+
+  .quote-image {
+    max-width: 100%;
+  }
 }
