--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,11 +1,10 @@
 /* Common styles */
-@import url('./_variables.css');
-@import url('./reset.css');
-@import url('./base.css');
-@import url('./container.css');
-@import url('./_animations.css');
-
 @import '../../node_modules/modern-normalize/modern-normalize.css';
+@import url('./reset.css');
+@import url('./variables.css');
+@import url('./container.css');
+@import url('./base.css');
+
 
 /* Sections style */
 @import url('./header.css');
