--- a/src/css/favorite.css
+++ b/src/css/favorite.css
@@ -1,55 +1,60 @@
 .favorites {
-    padding-top: 80px;
-    padding-bottom: 80px;
+  padding-top: 80px;
+  padding-bottom: 80px;
 }
 
 @media screen and (min-width: 768px) {
-    .favorites {
-        padding-top: 100px;
-        padding-bottom: 100px;
-         
-    }
+  .favorites {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
 }
 
 @media screen and (min-width: 1440px) {
-    .favorites {
-        padding-top: 90px;
-        padding-bottom: 51px;
-
-    }
+  .favorites {
+    padding-top: 90px;
+    padding-bottom: 51px;
+  }
 }
 
 .favorites-tittle {
-    color: #242424;
-    font-family: NeueMontrealRegular;
-    font-size: 28px;
-    font-style: normal;
-    line-height: 38px;
-    letter-spacing: -0.56px;
+  /* color: #242424;
+  font-family: NeueMontrealRegular;
+  font-size: 28px;
+  font-style: normal;
+  line-height: 38px;
+  letter-spacing: -0.56px; */
+
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 1.35714;
+  letter-spacing: -0.02em;
+  color: var(--color-black);
 }
 
 @media screen and (min-width: 768px) {
-    .favorites-tittle {
-        font-size: 44px;
-    }
-} 
+  .favorites-tittle {
+    font-size: 44px;
+    line-height: 1.09091;
+  }
+}
 
 .features-container {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 20px;
 }
 
 @media screen and (min-width: 768px) {
-    .features-container {
-        flex-direction: row;
-        gap: 16px;
-        margin-top: 16px;
-    }
+  .features-container {
+    flex-direction: row;
+    gap: 16px;
+    margin-top: 16px;
+  }
 }
 
-.favorites-container {
+/* .favorites-container {
     min-width: 320px;
     max-width: 480px;
     padding-left: 20px;
@@ -71,387 +76,374 @@
         padding-left: 32px;
         padding-right: 32px;
     }
- }
+ } */
 
 @media screen and (min-width: 1440px) {
-    .quote-conteiner {
-        display: flex;
-        flex-direction: column;
-        margin-right: 32px;
-    }
+  .quote-conteiner {
+    display: flex;
+    flex-direction: column;
+    margin-right: 32px;
+  }
 }
 
 @media screen and (min-width: 1440px) {
-    .favorites-thumb {
-        display: flex;
-        margin-top: 44px;      
-    }
+  .favorites-thumb {
+    display: flex;
+    margin-top: 44px;
+  }
 }
 
 .favorites-quote {
-    display:flex; 
-    position: relative;
-    border-radius: 20px;
-    background: #242424;
-    margin-top:20px; 
-    padding: 20px;
-
+  display: flex;
+  position: relative;
+  border-radius: 20px;
+  background: #242424;
+  margin-top: 20px;
+  padding: 20px;
 }
 
 .favorites-quote > man-svg {
-    position: absolute;
+  position: absolute;
 }
 
 @media screen and (min-width: 768px) {
-    .favorites-quote {
-        margin-top: 32px;
-        padding: 40px;        
-    }
+  .favorites-quote {
+    margin-top: 32px;
+    padding: 40px;
+  }
 }
 
 @media screen and (min-width: 1440px) {
-    .favorites-quote {
-        margin-top: 0; 
-        width: 494px;       
-    }
+  .favorites-quote {
+    margin-top: 0;
+    width: 494px;
+  }
 }
 
 .commas-svg {
-position: absolute;
-right: 20px;
-
+  position: absolute;
+  right: 20px;
 }
 
 .quote-tittle {
-    color: #F4F4F4;
-    font-family: NeueMontrealRegular;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 20px;
-    margin-bottom: 6px;
-   
+  color: #f4f4f4;
+  /* font-family: NeueMontrealRegular; */
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 20px;
+  margin-bottom: 6px;
 }
 
 @media screen and (min-width: 768px) {
-    .quote-tittle {
-        font-size: 24px;
-    }
+  .quote-tittle {
+    font-size: 24px;
+  }
 }
 
 .quote-text {
-    color: rgba(244, 244, 244, 0.60);
-    font-family: NeueMontrealRegular;
-    font-size: 14px;
-    line-height: 18px;
+  color: rgba(244, 244, 244, 0.6);
+  /* font-family: NeueMontrealRegular; */
+  font-size: 14px;
+  line-height: 18px;
 }
 
 .quote-content {
-    display: flex;
-    flex-direction: column; 
-    padding-left: 48px;         
+  display: flex;
+  flex-direction: column;
+  padding-left: 48px;
 }
 
 @media screen and (min-width: 768px) {
-    .quote-content {
-        width: 574px;
-    }
+  .quote-content {
+    width: 574px;
+  }
 }
 
 .quote-author {
-    margin-top: 18px;
-    color: #F4F4F4;    
-    font-family: NeueMontrealRegular;
-    font-size: 16px;
-    line-height: 24px;      
+  margin-top: 18px;
+  color: #f4f4f4;
+  /* font-family: NeueMontrealRegular; */
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .man-svg {
-    position: absolute;  
+  position: absolute;
 }
 
 .features {
-    border-radius: 20px;
-    background: #FFF;
+  border-radius: 20px;
+  background: #fff;
 }
 
-.features-tittle { 
-    color: #242424;
-    font-family: Neue MontrealMedium;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 20px;     
+.features-tittle {
+  color: #242424;
+  /* font-family: Neue MontrealMedium; */
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 20px;
 }
 
 @media screen and (min-width: 768px) {
-    .features-tittle {
-        font-size: 24px;
-    }
+  .features-tittle {
+    font-size: 24px;
+  }
 }
 
-.favorites-text { 
-    color: rgba(36, 36, 36, 0.60);
-    font-family: NeueMontrealRegular;
-    font-size: 14px;
-    line-height: 18px;   
+.favorites-text {
+  color: rgba(36, 36, 36, 0.6);
+  /* font-family: NeueMontrealRegular; */
+  font-size: 14px;
+  line-height: 18px;
 }
 
 .features-content {
-    display: inline-flex;
-    padding-top: 20px; 
-    padding-bottom:20px; 
-    padding-left: 20px;
-    flex-direction: column;
-    justify-content: center;
-    
+  display: inline-flex;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  flex-direction: column;
+  justify-content: center;
 }
 
 @media screen and (min-width: 768px) {
-    .features-content {
-        padding-top: 25px;
-        padding-bottom: 25px;
-        padding-left: 25px;
-        padding-right: 200px;
-    }
+  .features-content {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    padding-left: 25px;
+    padding-right: 200px;
+  }
 }
 
 @media screen and (min-width: 1440px) {
-    .features-content {
+  .features-content {
     padding-right: 95px;
-}    
+  }
 }
-    
+
 .favorites-img {
-    display: block;
-    width: 100%;
-    height: auto;
-    border-radius: 20px;  
+  display: block;
+  width: 100%;
+  height: auto;
+  border-radius: 20px;
 }
 
 .text-pozition {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 6px;
-    margin-top: 15px;
-    width: 119px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 6px;
+  margin-top: 15px;
+  width: 119px;
 }
 
 .default-text {
-    color: #242424; 
-    margin-top: 0;
+  color: #242424;
+  margin-top: 0;
 }
-
 
 @media screen and (min-width: 768px) {
-    .default-text {
-        font-size: 18px;
-    }
+  .default-text {
+    font-size: 18px;
+  }
 }
-
 
 .js-hidden-text {
-    display: flex;
-    margin-top: 40px;
-    text-align: center;
-    
-    margin-left: auto;
-    margin-right: auto;  
-    padding-left: 9px;
-    padding-right: 9px;  
-}
+  display: flex;
+  margin-top: 40px;
+  text-align: center;
 
-
-
-@media screen and (min-width: 768px){
-    .js-hidden-text {
-        margin-top: 140px;  
-        width: 554px;
-    } 
-}
-
-@media screen and (min-width: 1440px) {
-    .js-hidden-text {   
-        margin: auto;       
-    }
-}
-
-@media screen and (min-width: 1440px) {
-    .gallery-list {
-        margin-top: 0px;
-    }
-}
-
-.gallery-list {
-    display: flex;
-    margin-top: 40px;
-    text-align: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-bottom: 20px;
-}
-
-
-@media screen and (min-width: 768px) {
-.gallery-list {
-       gap:16px; 
-       margin-top: 64px;
-       margin-bottom: 32px;
-    }
-}
-
-
-@media screen and (min-width: 1440px) {
-    .gallery-list {
-        margin-top: 0px;
-        gap:  32px 16px;        
-    }
-}
-
-.exercise-card {
-    width: 100%;
-    margin: 0;
-    padding: 16px;
-    border-radius: 15px;
-    background: #FFF;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.exercise-card:hover, 
-.exercise-card:focus{
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, .12),
-    0px 1px 1px rgba(0, 0, 0, .14),
-    0px 2px 1px rgba(0, 0, 0, .2); 
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 9px;
+  padding-right: 9px;
 }
 
 @media screen and (min-width: 768px) {
-.exercise-card {
-       width: 343px;
-    }
+  .js-hidden-text {
+    margin-top: 140px;
+    width: 554px;
+  }
 }
 
 @media screen and (min-width: 1440px) {
-    .exercise-card {
-        width: 405px;
-    }
+  .js-hidden-text {
+    margin: auto;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .gallery-list {
+    margin-top: 0px;
+  }
+}
+
+.gallery-list {
+  display: flex;
+  margin-top: 40px;
+  text-align: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .gallery-list {
+    gap: 16px;
+    margin-top: 64px;
+    margin-bottom: 32px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .gallery-list {
+    margin-top: 0px;
+    gap: 32px 16px;
+  }
+}
+
+.exercise-card {
+  width: 100%;
+  margin: 0;
+  padding: 16px;
+  border-radius: 15px;
+  background: #fff;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.exercise-card:hover,
+.exercise-card:focus {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (min-width: 768px) {
+  .exercise-card {
+    width: 343px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .exercise-card {
+    width: 405px;
+  }
 }
 
 .workout {
-    display: inline-block;
-    font-family: NeueMontrealRegular;
-    font-size: 12px;
-    font-weight: 500;
-    line-height: normal;
-    padding:  5px 7.5px; 
-    border-radius: 15px;
-    border: 1px solid #242424;
+  display: inline-block;
+  /* font-family: NeueMontrealRegular; */
+  font-size: 12px;
+  font-weight: 500;
+  line-height: normal;
+  padding: 5px 7.5px;
+  border-radius: 15px;
+  border: 1px solid #242424;
 }
 
 .exercise-btn {
-    font-family: inherit;
-    font-size: 14px;
-    padding:0;
-    line-height: 18px;
-    display: inline-flex;
-    justify-content: space-around;
-    align-items: center;
-    min-width: 54px;
-    border: none;
-    text-align: center;
-    cursor: pointer;
-    min-height: 30px;
-    background-color: inherit;
-    transition: font-size 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-family: inherit;
+  font-size: 14px;
+  padding: 0;
+  line-height: 18px;
+  display: inline-flex;
+  justify-content: space-around;
+  align-items: center;
+  min-width: 54px;
+  border: none;
+  text-align: center;
+  cursor: pointer;
+  min-height: 30px;
+  background-color: inherit;
+  transition: font-size 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .exercise-btn:hover,
 .exercise-btn:focus {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 .exersise-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .favorite-exercise-name {
-    font-family: NeueMontrealRegular;
-    font-size: 20px;
-    line-height: 20px;
-    line-height: 20px
+  /* font-family: NeueMontrealRegular; */
+  font-size: 20px;
+  line-height: 20px;
+  line-height: 20px;
 }
 
 @media screen and (min-width: 768px) {
-    .favorite-exercise-name {
-        font-size: 24px;
-        line-height: 32px;
-    }
+  .favorite-exercise-name {
+    font-size: 24px;
+    line-height: 32px;
+  }
 }
 
 .exercise-tittle {
-    display: flex;
-    margin-top: 27px;
-    text-align: left;    
-    gap: 16px;
+  display: flex;
+  margin-top: 27px;
+  text-align: left;
+  gap: 16px;
 }
 
 .man-svg-thumb {
-    width: 24px;
-    height: 24px;
+  width: 24px;
+  height: 24px;
 }
 
 .exercise-trash {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .trash-btn {
-    margin-left: 8px;
-    border: none;
-    text-align: center;
-    cursor: pointer;
-    background-color: inherit;
+  margin-left: 8px;
+  border: none;
+  text-align: center;
+  cursor: pointer;
+  background-color: inherit;
 }
 
 .trash-svg {
-    stroke: black;
-    fill: transparent;    
+  stroke: black;
+  fill: transparent;
 }
 
 .arrow-svg {
-    stroke: black;
+  stroke: black;
 }
 
 .trash-svg:hover,
-.trash-svg:focus
-
-{
-    width: 17px;
-    height: 17px;
-    cursor: pointer;
+.trash-svg:focus {
+  width: 17px;
+  height: 17px;
+  cursor: pointer;
 }
 
 .exercise-category {
-    color: rgba(36, 36, 36, 0.40);  
-    font-family: NeueMontrealRegular;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 18px;
-    text-align: center;
-   
+  color: rgba(36, 36, 36, 0.4);
+  /* font-family: NeueMontrealRegular; */
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  text-align: center;
 }
 
 .exercise-category:not(:last-child) {
-margin-right: 10px;
+  margin-right: 10px;
 }
 
-.exercise-category>span {
-    color: #242424;
+.exercise-category > span {
+  color: #242424;
 }
 
 .exercice-information {
-    display: flex;
-    justify-content:space-between;
-    margin-top: 16px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 16px;
 }
-
