--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -5,7 +5,7 @@ body.modal-open {
 .backdrop {
   position: fixed;
   inset: 0;
-  background-color: var(--modal-backdrop);
+  background-color: var(--color-modal-backdrop);
   transition-property: opacity;
   transition: var(--tran-fast);
   overflow: auto;
@@ -17,11 +17,11 @@ body.modal-open {
   left: 50%;
   transform: translateX(-50%);
   padding: 40px 20px;
-  background-color: var(--primary-color);
+  background-color: var(--color-black);
   border-radius: 20px;
   max-width: 335px;
   min-width: 320px;
-  color: var(--white-color);
+  color: var(--color-white);
   transition-property: all;
   transition: var(--tran-fast);
 }
@@ -75,8 +75,8 @@ body.modal-open {
 .icon-modal-close {
   width: 100%;
   height: 100%;
-  fill: var(--white-color);
-  stroke: var(--white-color);
+  fill: var(--color-white);
+  stroke: var(--color-white);
 }
 
 .img-modal-exercise {
@@ -151,7 +151,7 @@ body.modal-open {
 }
 
 .icon-modal-star {
-  fill: var(--rating-color);
+  fill: var(--color-rating);
 }
 
 /* Stats */
@@ -180,7 +180,7 @@ body.modal-open {
 
 .stats-title {
   font-size: 12px;
-  color: var(--title-color);
+  color: var(--color-title);
   margin-bottom: 4px;
 }
 
@@ -188,7 +188,7 @@ body.modal-open {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.28571;
-  color: var(--white-color);
+  color: var(--color-white);
 }
 
 /* Description */
@@ -207,7 +207,7 @@ body.modal-open {
 .desc-text {
   line-height: 1.28571;
   font-size: 14px;
-  color: var(--text-secondary-color);
+  color: var(--color-text-secondary);
 }
 
 .title-modal::first-letter,
@@ -232,8 +232,8 @@ body.modal-open {
 .btn-modal-filled {
   border-radius: 30px;
   padding: 12px 24px;
-  background-color: var(--white-color);
-  color: var(--primary-color);
+  background-color: var(--color-white);
+  color: var(--color-black);
   font-size: 14px;
   line-height: 1.28571;
 }
@@ -247,8 +247,8 @@ body.modal-open {
 
 .btn-modal-filled:hover {
   background-color: transparent;
-  color: var(--white-color);
-  outline: 1px solid var(--white-color);
+  color: var(--color-white);
+  outline: 1px solid var(--color-white);
 }
 
 .btn-modal-add-fav {
@@ -263,7 +263,7 @@ body.modal-open {
 }
 
 .btn-modal-add-fav:hover > .icon-fav-btn {
-  stroke: var(--white-color);
+  stroke: var(--color-white);
 }
 
 @media screen and (min-width: 768px) {
@@ -287,7 +287,7 @@ body.modal-open {
 
 .icon-fav-btn {
   fill: none;
-  stroke: var(--primary-color);
+  stroke: var(--color-black);
 }
 
 @media screen and (min-width: 768px) {
@@ -302,8 +302,8 @@ body.modal-open {
   border-radius: 30px;
   padding: 12px 22px;
   background-color: transparent;
-  outline: 1px solid var(--white-color);
-  color: var(--white-color);
+  outline: 1px solid var(--color-white);
+  color: var(--color-white);
   font-size: 14px;
   line-height: 1.28571;
   text-wrap: nowrap;
@@ -312,8 +312,8 @@ body.modal-open {
 }
 
 .btn-modal-give-rating:hover {
-  background-color: var(--white-color);
-  color: var(--primary-color);
+  background-color: var(--color-white);
+  color: var(--color-black);
 }
 
 @media screen and (min-width: 768px) {
@@ -337,7 +337,7 @@ body.modal-open {
   max-width: 335px;
   width: 100%;
   min-width: 320px;
-  background-color: var(--primary-color);
+  background-color: var(--color-black);
   border-radius: 20px;
   padding: 40px 20px;
   transition-property: opacity;
@@ -353,13 +353,13 @@ body.modal-open {
 
 .add-rating-title {
   font-size: 12px;
-  color: var(--title-color);
+  color: var(--color-title);
   margin-bottom: 8px;
 }
 
 .add-rating-value {
   font-size: 12px;
-  color: var(--white-color);
+  color: var(--color-white);
   text-align: center;
   vertical-align: middle;
   width: 10px;
@@ -385,15 +385,15 @@ body.modal-open {
 }
 
 .icon-modal-rating-star {
-  fill: var(--rating-color);
+  fill: var(--color-rating);
 }
 
 .input-modal {
-  color: var(--text-secondary-color);
+  color: var(--color-text-secondary);
   font-size: 14px;
   line-height: 1.28571;
   background-color: transparent;
-  border: 1px solid var(--white-color);
+  border: 1px solid var(--color-white);
   border-radius: 30px;
   padding: 12px 14px;
   width: 100%;
@@ -408,11 +408,11 @@ body.modal-open {
 }
 
 .input-modal:focus {
-  outline: 1px solid var(--white-color);
+  outline: 1px solid var(--color-white);
 }
 
 .input-modal::placeholder {
-  color: var(--text-secondary-color);
+  color: var(--color-text-secondary);
 }
 
 .add-rating-email {
@@ -452,7 +452,7 @@ body.modal-open {
   bottom: 0;
   width: 100%;
   height: 1px;
-  background-color: var(--rating-color);
+  background-color: var(--color-rating);
 }
 
 .icon {
@@ -461,5 +461,5 @@ body.modal-open {
 }
 
 .gold {
-  fill: var(--accent-color);
+  fill: var(--color-accent);
 }
