--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,10 +1,9 @@
 /* Common styles */
-@import '../../node_modules/modern-normalize/modern-normalize.css';
+/* @import '../../node_modules/modern-normalize/modern-normalize.css'; */
 @import url('./reset.css');
 @import url('./variables.css');
 @import url('./container.css');
 @import url('./base.css');
-
 
 /* Sections style */
 @import url('./header.css');
