--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,22 +1,22 @@
 <header class="header">
-  <div class="container">
-    <a class="header-logo" href="./index.html" aria-label="Site logo">
-      <svg class="logo-svg">
-        <use href="./img/icons/sprites.svg#logo"></use>
-      </svg>
-    </a>
+  <!-- <div class="container"> -->
+  <a class="header-logo" href="./index.html" aria-label="Site logo">
+    <svg class="logo-svg">
+      <use href="./img/icons/sprites.svg#logo"></use>
+    </svg>
+  </a>
 
-    <load src="partials/nav.html" />
+  <load src="partials/nav.html" />
 
-    <button
-      type="button"
-      aria-label="Open menu"
-      class="burger-menu"
-      onclick="toggleMenu('open')"
-    >
-      <svg class="burger-menu-icon">
-        <use href="./img/icons/sprites.svg#burger"></use>
-      </svg>
-    </button>
-  </div>
+  <button
+    type="button"
+    aria-label="Open menu"
+    class="burger-menu"
+    onclick="toggleMenu('open')"
+  >
+    <svg class="burger-menu-icon">
+      <use href="./img/icons/sprites.svg#burger"></use>
+    </svg>
+  </button>
+  <!-- </div> -->
 </header>
