--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,29 +1,30 @@
 <footer class="footer">
   <div class="container">
     <div class="footer-content">
-      <div class="footer-starter">
+      <div class="footer-content-start">
         <a class="footer-logo" href="./index.html" aria-label="Site logo">
           <svg class="logo-svg">
             <use href="./img/icons/sprites.svg#logo-light"></use>
           </svg>
         </a>
 
-        <!-- soc-list -->
         <load src="partials/nav.html" />
       </div>
 
-      <p class="footer-cta-text">
-        Transforming your <em>body</em> shape with us
-      </p>
-
-      <div class="subscription">
-        <p class="footer-subscribe-text">
-          Subscribe and learn about new exercises!
+      <div class="footer-content-end">
+        <p class="footer-cta-text">
+          Transforming your <em>body</em> shape with us
         </p>
-        <form class="footer-form">
-          <input type="email" placeholder="Email" required />
-          <button type="submit">Send</button>
-        </form>
+
+        <div class="subscription">
+          <p class="footer-subscribe-text">
+            Subscribe and learn about new exercises!
+          </p>
+          <form class="footer-form">
+            <input type="email" placeholder="Email" required />
+            <button type="submit">Send</button>
+          </form>
+        </div>
       </div>
     </div>
 
@@ -40,7 +41,7 @@
         >
       </div>
 
-      <p>&copy;2023</p>
+      <p class="footer-note-year">&copy;2023</p>
     </div>
   </div>
 </footer>
