--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,20 +1,22 @@
 /* #region General */
 .header {
-  margin-top: 16px;
-  @media screen and (min-width: 320px) and (max-width: 767px) {
-    margin-bottom: 80px;
-  }
+  padding-top: 16px;
+  padding-bottom: 80px;
+}
 
-  @media screen and (min-width: 768px) and (max-width: 1439px) {
-    margin-bottom: 100px;
-  }
-
-  @media screen and (min-width: 1440px) {
-    margin-bottom: 96px;
+@media screen and (min-width: 768px) {
+  .header {
+    padding-bottom: 100px;
   }
 }
 
-.container .header {
+@media screen and (min-width: 1440px) {
+  .header {
+    padding-bottom: 96px;
+  }
+}
+
+.header .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -80,7 +82,7 @@
     padding: 14px 34px;
     display: flex;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1440px) {
     padding: 14px 50px;
   }
 }
@@ -124,8 +126,8 @@
   border-radius: 10px;
 }
 .header .soc-item {
-  border: 1px solid rgba(36, 36, 36, 0.1);
-  background-color: var(--color-grey);
+  border: 1px solid var(--color-grey);
+  background-color: var(--color-white);
   transition: var(--trns);
   transition-property: background-color;
 }
@@ -148,8 +150,8 @@
   transition-property: fill;
 }
 
-.soc-item:hover .icon,
-.soc-item:focus .icon {
+.header .soc-item:hover .icon,
+.header .soc-item:focus .icon {
   fill: var(--color-white);
 }
 /* #endregion Socials */
