--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -9,7 +9,7 @@ body:has(.menu.is-open) {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #12141766;
+  background-color: var(--color-modal-backdrop);
 
   pointer-events: none;
   opacity: 0;
@@ -43,12 +43,12 @@ body:has(.menu.is-open) {
   width: 32px;
   height: 32px;
 
-  color: var(--color-grey);
+  color: var(--color-white);
   cursor: pointer;
 }
 
 .close-btn-icon {
-  color: var(--color-grey);
+  color: var(--color-white);
   width: 100%;
   height: 100%;
 }
@@ -90,7 +90,7 @@ body:has(.menu.is-open) {
   align-items: center;
   gap: 16px;
 
-  color: var(--color-grey);
+  color: var(--color-white);
   background-color: var(--color-black);
 }
 
@@ -111,7 +111,7 @@ body:has(.menu.is-open) {
 }
 
 .menu .nav-link.active {
-  color: var(--color-grey);
+  color: var(--color-white);
   background-color: var(--color-black);
 }
 /* #endregion Navigation */
@@ -132,7 +132,7 @@ body:has(.menu.is-open) {
 }
 .menu .soc-item:hover,
 .menu .soc-item:focus {
-  background-color: var(--color-grey);
+  background-color: var(--color-white);
 }
 
 .menu .soc-link {
@@ -142,7 +142,7 @@ body:has(.menu.is-open) {
 .menu .soc-link .icon {
   width: 28px;
   height: 28px;
-  fill: var(--color-grey);
+  fill: var(--color-white);
   transition: var(--trns);
   transition-property: fill;
 }
