--- a/src/css/base.css
+++ b/src/css/base.css
@@ -31,6 +31,16 @@ body {
   margin: 0;
   padding: 0;
 }
+body,
+html {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+main {
+  flex: 1;
+}
 
 button {
   border: 1px solid #f4f4f4;
