--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -21,7 +21,12 @@
             Subscribe and learn about new exercises!
           </p>
           <form class="footer-form">
-            <input type="email" placeholder="Email" required />
+            <input
+              type="email"
+              placeholder="Email"
+              required
+              pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
+            />
             <button type="submit">Send</button>
           </form>
         </div>
