--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,11 @@
 <header class="header">
   <div class="container">
-    <a class="header-logo" href="./index.html" aria-label="Site logo">
+    <a
+      class="header-logo"
+      href="./index.html"
+      aria-label="Site logo"
+      rel="noopener noreferrer"
+    >
       <svg class="logo-svg">
         <use href="./img/icons/sprites.svg#logo-dark"></use>
       </svg>
