--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,9 +1,19 @@
 <ul class="nav-list">
   <li class="nav-item">
-    <a class="nav-link" href="./index.html" aria-label="Home page">Home</a>
+    <a
+      class="nav-link"
+      href="./index.html"
+      aria-label="Home page"
+      rel="noopener noreferrer"
+      >Home</a
+    >
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="./favorites.html" aria-label="Favorites page"
+    <a
+      class="nav-link"
+      href="./favorites.html"
+      aria-label="Favorites page"
+      rel="noopener noreferrer"
       >Favorites</a
     >
   </li>
@@ -16,6 +26,7 @@
       class="soc-link"
       aria-label="Facebook"
       target="_blank"
+      rel="noopener noreferrer"
     >
       <svg class="icon">
         <use href="./img/icons/sprites.svg#facebook"></use>
@@ -28,6 +39,7 @@
       class="soc-link"
       aria-label="Instagram"
       target="_blank"
+      rel="noopener noreferrer"
     >
       <svg class="icon">
         <use href="./img/icons/sprites.svg#instagram"></use>
@@ -40,9 +52,10 @@
       class="soc-link"
       aria-label="Youtube"
       target="_blank"
+      rel="noopener noreferrer"
     >
       <svg class="icon">
-        <use href="./img/icons/sprites.svg#youtube"></use>
+        <use href="./img/icons/sprites.svg#youtube "></use>
       </svg>
     </a>
   </li>
