--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -7,7 +7,11 @@
 }
 
 .footer {
-  padding-bottom: 10px;
+  margin-bottom: 10px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 16;
+  }
 }
 /* #endregion General */
 
@@ -51,7 +55,7 @@
 }
 
 .footer-content-end {
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1440px) {
     display: flex;
     justify-content: space-between;
   }
@@ -107,15 +111,15 @@
 .footer-cta-text {
   font-size: 38px;
   line-height: 1.157;
-  letter-spacing: -0.02em;
   padding-bottom: 20px;
+  letter-spacing: -0.02em;
 
   @media screen and (min-width: 768px) {
     font-size: 56px;
     line-height: 1.071;
     letter-spacing: 0.04em;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1440px) {
     letter-spacing: -0.02em;
   }
 }
@@ -125,7 +129,7 @@
 .footer .subscription {
   width: 100%;
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1440px) {
     width: 354px;
   }
 }
@@ -215,7 +219,7 @@
 .footer-note-year {
   margin-left: auto;
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1440px) {
     margin-right: 308px;
   }
 }
