--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,16 +1,18 @@
 /* #region General */
 .header {
-  margin-top: 16px;
-  @media screen and (min-width: 320px) and (max-width: 767px) {
-    margin-bottom: 80px;
+  margin-top: 20px;
+  @media screen and (max-width: 767px) {
+    padding-bottom: 80px;
   }
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    margin-bottom: 100px;
+  @media screen and (min-width: 768px) and (max-width: 1439px) {
+    margin-top: 24px;
+    padding-bottom: 100px;
   }
 
-  @media screen and (min-width: 1200px) {
-    margin-bottom: 96px;
+  @media screen and (min-width: 1440px) {
+    margin-top: 28px;
+    padding-bottom: 96px;
   }
 }
 
@@ -18,7 +20,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 80px;
 }
 
 .header-logo {
@@ -80,7 +81,7 @@
     padding: 14px 34px;
     display: flex;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1440px) {
     padding: 14px 50px;
   }
 }
