--- a/src/css/quotes.css
+++ b/src/css/quotes.css
@@ -1,204 +1,162 @@
 @import url(./styles.css);
-
-/* Загальні стилі */
-section {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-}
-
 .quotes .container {
-  align-items: flex-start;
-  background: var(--primary-color);
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  padding: 16px;
+  background: var(--color-black);
   border-radius: 20px;
-  padding: 40px;
-  max-width: 444px;
   margin: 0 auto;
-  margin-top: 16px;
 }
+
 .quote-news.container {
   background-color: #fff;
 }
-.quote-of-day,
-.quote-news {
+
+.quote-of-day.container,
+.quote-image.container,
+.quote-news.container {
   display: flex;
   flex-direction: row;
-  gap: 16px;
   align-items: flex-start;
-  padding: 0;
   width: 100%;
-  max-width: 364px;
 }
+.quote-image.container {
+  background: none;
+  padding: 0;
+}
+
+/* .quote-of-day.container,
+.quote-news.container {
+  flex: 0 1;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 16px;
+} */
 
 .quote-icon-wrapper {
   width: 34px;
-  height: 32px;
-  background: var(--rating-color);
+  height: 34px;
   display: flex;
   align-items: center;
   justify-content: center;
-  /* margin: 0 auto; */
-  padding: 0 4px;
-
+  background: var(--color-rating);
   border-radius: 50%;
+  padding: 0 4px;
 }
 .quote-news > .quote-icon-wrapper {
-  background-color: var(--primary-color);
-  padding: 0 4px;
-  width: 34px;
-  height: 32px;
+  background-color: var(--color-black);
 }
-
 .quote-icon {
   width: 20px;
   height: 20px;
-  fill: var(--white-color);
+  fill: var(--color-white);
 }
 
-.quote-wraper {
+.quote-wraper,
+.quote-news-wraper {
   display: flex;
   flex-direction: column;
-  gap: 6px;
-  width: 100%;
+  gap: 8px;
 }
 
 .quote-header {
   display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: space-between;
-  /* gap: 16px; */
-  position: relative;
+  align-items: center;
 }
 
 .quote-title {
-  font-family: 'DM Sans', sans-serif;
   font-weight: 500;
-  font-size: 24px;
-  line-height: 32px;
-  color: var(--white-color);
+  font-size: 20px;
+  line-height: 1em;
+  color: var(--color-white);
 }
-
-/* Текст цитати */
-.quote {
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-}
-
-.quote-text {
-  font-family: 'DM Sans', sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 18px;
-  color: var(--text-secondary-color);
-  width: 314px;
-  height: auto;
-}
-
-.quote-author {
-  font-family: 'DM Sans', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  color: var(--white-color);
-}
-
-/* Стилі для секції з картинкою */
-.quote-image {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-  margin-top: 16px;
-  max-width: 444px;
-}
-
-.quote-image-img {
-  border-radius: 20px;
-  overflow: hidden;
-  margin: 0 auto;
-}
-
-/* Блок новин */
-
-.quote-news-wraper {
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-}
-
-.quote-news-header {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-}
-
 .quote-news-title {
-  font-family: 'DM Sans', sans-serif;
   font-weight: 500;
-  font-size: 24px;
-  line-height: 32px;
+  font-size: 20px;
+  line-height: 1em;
 }
 
 .quote-news-subtitle {
-  font-family: 'DM Sans', sans-serif;
-  font-weight: 400;
   font-size: 16px;
-  line-height: 24px;
-  color: rgba(36, 36, 36, 0.6);
+  line-height: 1.1em;
+  color: var(--color-darkgrey);
 }
-
+.quote-text,
 .quote-news-text {
-  font-family: 'DM Sans', sans-serif;
-  font-weight: 400;
   font-size: 14px;
-  line-height: 18px;
+  line-height: 1.1em;
+  color: var(--color-text-secondary);
+}
+.quote-news-text {
+  color: inherit;
 }
 
-@media (max-width: 1200px) {
-  .quotes.container {
+.quote-author {
+  font-size: 18px;
+  color: var(--color-white);
+}
+
+.quote-image {
+  display: block;
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+}
+
+.quote-image-img {
+  width: 100%;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+/* Tablet Styles */
+@media (min-width: 768px) {
+  .quotes {
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    flex: 1 1 calc(50%);
+    gap: 32px;
   }
 
-  .quote-block,
-  .news-block {
-    max-width: 300px;
-    margin: 16px auto;
-    padding: 20px;
+  /* .quotes {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 32px;
+    padding: 32px;
+  } */
+
+  .quote-of-day,
+  .quote-image,
+  .quote-news {
+    flex: 1 1 calc(50% - 16px);
+    max-width: calc(50% - 16px);
   }
-  .quote-author {
-    font-size: 14px;
+
+  .quote-title,
+  .quote-news-title {
+    font-size: 24px;
   }
 }
 
-@media (max-width: 767px) {
-  .quotes .container {
-    padding: 16px;
-    max-width: 100%;
-  }
-  .quote-of-day,
-  .quote-news {
-    align-items: flex-start;
-    gap: 12px;
-    padding: 16px;
-    max-width: 100%;
+/* Desktop Styles */
+@media (min-width: 1200px) {
+  .quotes {
+    flex-direction: column;
+    max-width: 444px;
   }
 
-  .quote-text,
-  .quote-news-text {
+  .quote-of-day,
+  .quote-image,
+  .quote-news {
+    flex: 0 1 auto;
     width: 100%;
   }
 
   .quote-title,
   .quote-news-title {
-    font-size: 18px;
-  }
-
-  .quote-image {
-    max-width: 100%;
+    font-size: 24px;
+    line-height: 1.1em;
   }
 }
