--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,11 +1,13 @@
-<div class="exercises exercises-row" id="exercises-container"></div>
+<div class="exercises-col-xl">
+  <div class="exercises exercises-row" id="exercises-container"></div>
 
-<div class="exercises-row">
-  <div class="exercises-pagination">
-    <ul></ul>
-  </div>
   <div class="exercises-row">
-    <div class="exercise-details" id="exercise-details"></div>
+    <div class="exercises-pagination">
+      <ul></ul>
+    </div>
+    <div class="exercises-row">
+      <div class="exercise-details" id="exercise-details"></div>
+    </div>
+    <button type="button">WORKOUT</button>
   </div>
-  <button type="button">WORKOUT</button>
 </div>
