--- a/src/partials/quotes.html
+++ b/src/partials/quotes.html
@@ -1,110 +1,89 @@
-<div class="quotes container">
-  <!-- Quote -->
-  <div class="quote-of-day container">
-    <div class="quote-icon-wrapper">
-      <svg class="quote-icon">
-        <use href="../img/icons/sprites.svg#running-man"></use>
-      </svg>
-    </div>
-    <div class="quote-wraper">
-      <div class="quote-header">
-        <h2 class="quote-title">Quote of the Day</h2>
+<div class="exercises-col-xl-auto">
+  <div class="quotes">
+    <!-- Quote -->
+    <div class="quote-of-day">
+      <div class="quote-icon-wrapper">
         <svg class="quote-icon">
-          <use href="../img/icons/sprites.svg#quotes"></use>
+          <use href="../img/icons/sprites.svg#running-man"></use>
         </svg>
       </div>
-      <div class="quote">
-        <p class="quote-text">
-          A lot of times I find that people who are blessed with the most talent
-          don't ever develop that attitude, and the ones who aren't blessed in
-          that way are the most competitive and have the biggest heart.
-        </p>
-        <p class="quote-author">Tom Brady</p>
+      <div class="quote-wraper">
+        <div class="quote-header">
+          <h2 class="quote-title">Quote of the Day</h2>
+          <svg class="quote-icon">
+            <use href="../img/icons/sprites.svg#quotes"></use>
+          </svg>
+        </div>
+        <div class="quote">
+          <p class="quote-text">
+            A lot of times I find that people who are blessed with the most talent
+            don't ever develop that attitude, and the ones who aren't blessed in
+            that way are the most competitive and have the biggest heart.
+          </p>
+          <p class="quote-author">Tom Brady</p>
+        </div>
       </div>
     </div>
-  </div>
-  <!-- End Quote -->
+    <!-- End Quote -->
 
-  <div class="quote-image container">
-    <picture class="quote-image-img">
-      <!-- Mobile -->
-      <source
-        srcset="
+    <div class="quote-image">
+      <picture class="quote-image-img">
+        <!-- Mobile -->
+        <source srcset="
           ../img/quote/mobile-1x.webp 1x,
           ../img/quote/mobile-2x.webp 2x,
           ../img/quote/mobile-3x.webp 3x
-        "
-        type="image/webp"
-      />
-      <source
-        srcset="
+        " type="image/webp" />
+        <source srcset="
           ../img/quote/mobile-1x.png 1x,
           ../img/quote/mobile-2x.png 2x,
           ../img/quote/mobile-3x.png 3x
-        "
-      />
-      <!-- Tablet -->
-      <source
-        media="(min-width: 768px)"
-        srcset="
+        " />
+        <!-- Tablet -->
+        <source media="(min-width: 768px)" srcset="
           ../img/quote/tablet-1x.webp 1x,
           ../img/quote/tablet-2x.webp 2x,
           ../img/quote/tablet-3x.webp 3x
-        "
-        type="image/webp"
-      />
-      <source
-        media="(min-width: 768px)"
-        srcset="
+        " type="image/webp" />
+        <source media="(min-width: 768px)" srcset="
           ../img/quote/tablet-1x.png 1x,
           ../img/quote/tablet-2x.png 2x,
           ../img/quote/tablet-3x.png 3x
-        "
-      />
-      <!-- Desktop -->
-      <source
-        media="(min-width: 1200px)"
-        srcset="
+        " />
+        <!-- Desktop -->
+        <source media="(min-width: 1200px)" srcset="
           ../img/quote/desktop-1x.webp 1x,
           ../img/quote/desktop-2x.webp 2x,
           ../img/quote/desktop-3x.webp 3x
-        "
-        type="image/webp"
-      />
-      <source
-        media="(min-width: 1200px)"
-        srcset="
+        " type="image/webp" />
+        <source media="(min-width: 1200px)" srcset="
           ../img/quote/desktop-1x.png 1x,
           ../img/quote/desktop-2x.png 2x,
           ../img/quote/desktop-3x.png 3x
-        "
-      />
-      <img
-        src="../img/quote/mobile-1x.png"
-        alt="women sportswear taking break from workout"
-        loading="lazy"
-      />
-    </picture>
-  </div>
-
-  <!-- News -->
-  <div class="quote-news container">
-    <div class="quote-icon-wrapper">
-      <svg class="quote-icon">
-        <use href="../img/icons/sprites.svg#dumbbell"></use>
-      </svg>
+        " />
+        <img src="../img/quote/mobile-1x.png" alt="women sportswear taking break from workout" loading="lazy" />
+      </picture>
     </div>
-    <div class="quote-news-wraper">
-      <div class="quote-news-header">
-        <h2 class="quote-news-title">110 min</h2>
-        <p class="quote-news-subtitle">Daily norm of sports</p>
+
+    <!-- News -->
+    <div class="quote-news">
+      <div class="quote-icon-wrapper">
+        <svg class="quote-icon">
+          <use href="../img/icons/sprites.svg#dumbbell"></use>
+        </svg>
       </div>
-      <p class="quote-news-text">
-        The World Health Organization recommends at least 150 minutes of
-        moderate-intensity aerobic physical activity throughout the week for
-        adults aged 18-64. However, what happens if we adjust that number to 110
-        minutes every day?
-      </p>
+      <div class="quote-news-wraper">
+        <div class="quote-news-header">
+          <h2 class="quote-news-title">110 min</h2>
+          <p class="quote-news-subtitle">Daily norm of sports</p>
+        </div>
+        <p class="quote-news-text">
+          The World Health Organization recommends at least 150 minutes of
+          moderate-intensity aerobic physical activity throughout the week for
+          adults aged 18-64. However, what happens if we adjust that number to 110
+          minutes every day?
+        </p>
+      </div>
     </div>
   </div>
 </div>
