--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -1,5 +1,5 @@
 <section class="container">
-  <div class="exercises-row exercises-row--jsb-ca exercises-mb_20 w-full">
+  <div class="exercises-row exercises-row--jsb exercises-mb_20 w-full">
     <div class="exercises-col-xl-auto">
       <ul class="breadcrumbs">
         <li>
