--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,4 @@
-<div class="exercises-col-xl">
+<div class="exercises-col-xl order-xl-1">
   <div class="exercises exercises-row" id="exercises-container"></div>
 
   <div class="exercises-row">
