--- a/src/css/main.css
+++ b/src/css/main.css
@@ -170,24 +170,35 @@
   padding-inline: 0.5rem;
 }
 
-.exercises__col{
-  flex: 0 0 auto;
-  width: 100%;
-}
-
 .w-full{
   width: 100%;
 }
 
 @media (min-width: 768px) {
-  .exercises__col{
+  .exercises-md-col-4{
+    flex: 0 0 auto;
     width: 33.33333333%;
+  }
+
+  .exercises-md-col-5 {
+    flex: 0 0 auto;
+    width: 41.66666667%;
+  }
+
+  .exercises-md-col-7{
+    flex: 0 0 auto;
+    width: 58.33333333%;
   }
 }
 
 @media (min-width: 1440px) {
   .order-xl-1{
     order: 1;
+  }
+
+  .exercises-xl-col-12{
+    flex: 0 0 auto;
+    width: 100%;
   }
 
   .exercises-col-xl-auto{
@@ -197,6 +208,10 @@
 
   .exercises-col-xl{
     flex: 1 0 0%;
+  }
+
+  .me-xl-16{
+    margin-inline-end: 0.5rem;
   }
 }
 /********************** End of Common classes **********************/
