paths once again

--- a/src/partials/quotes.html
+++ b/src/partials/quotes.html
@@ -5,14 +5,14 @@
       <div class="quote-of-day">
         <div class="quote-icon-wrapper">
           <svg class="quote-icon">
-            <use href="../img/icons/sprites.svg#running-man"></use>
+            <use href="./img/icons/sprites.svg#running-man"></use>
           </svg>
         </div>
         <div class="quote-wraper">
           <div class="quote-header">
             <h2 class="quote-title">Quote of the Day</h2>
             <svg class="quote-icon">
-              <use href="../img/icons/sprites.svg#quotes"></use>
+              <use href="./img/icons/sprites.svg#quotes"></use>
             </svg>
           </div>
           <div class="quote">
@@ -33,38 +33,38 @@
         <picture class="quote-image-img">
           <!-- Mobile -->
           <source srcset="
-          ../img/quote/mobile-1x.webp 1x,
-          ../img/quote/mobile-2x.webp 2x,
-          ../img/quote/mobile-3x.webp 3x
+          ./img/quote/mobile-1x.webp 1x,
+          ./img/quote/mobile-2x.webp 2x,
+          ./img/quote/mobile-3x.webp 3x
         " type="image/webp" />
           <source srcset="
-          ../img/quote/mobile-1x.jpg 1x,
-          ../img/quote/mobile-2x.jpg 2x,
-          ../img/quote/mobile-3x.jpg 3x
+          ./img/quote/mobile-1x.jpg 1x,
+          ./img/quote/mobile-2x.jpg 2x,
+          ./img/quote/mobile-3x.jpg 3x
         " />
           <!-- Tablet -->
           <source media="(min-width: 768px)" srcset="
-          ../img/quote/tablet-1x.webp 1x,
-          ../img/quote/tablet-2x.webp 2x,
-          ../img/quote/tablet-3x.webp 3x
+          ./img/quote/tablet-1x.webp 1x,
+          ./img/quote/tablet-2x.webp 2x,
+          ./img/quote/tablet-3x.webp 3x
         " type="image/webp" />
           <source media="(min-width: 768px)" srcset="
-          ../img/quote/tablet-1x.jpg 1x,
-          ../img/quote/tablet-2x.jpg 2x,
-          ../img/quote/tablet-3x.jpg 3x
+          ./img/quote/tablet-1x.jpg 1x,
+          ./img/quote/tablet-2x.jpg 2x,
+          ./img/quote/tablet-3x.jpg 3x
         " />
           <!-- Desktop -->
           <source media="(min-width: 1200px)" srcset="
-          ../img/quote/desktop-1x.webp 1x,
-          ../img/quote/desktop-2x.webp 2x,
-          ../img/quote/desktop-3x.webp 3x
+          ./img/quote/desktop-1x.webp 1x,
+          ./img/quote/desktop-2x.webp 2x,
+          ./img/quote/desktop-3x.webp 3x
         " type="image/webp" />
           <source media="(min-width: 1200px)" srcset="
-          ../img/quote/desktop-1x.jpg 1x,
-          ../img/quote/desktop-2x.jpg 2x,
-          ../img/quote/desktop-3x.jpg 3x
+          ./img/quote/desktop-1x.jpg 1x,
+          ./img/quote/desktop-2x.jpg 2x,
+          ./img/quote/desktop-3x.jpg 3x
         " />
-          <img src="../img/quote/mobile-1x.jpg" alt="women sportswear taking break from workout" loading="lazy" />
+          <img src="./img/quote/mobile-1x.jpg" alt="women sportswear taking break from workout" loading="lazy" />
         </picture>
       </div>
     </div>
@@ -74,7 +74,7 @@
       <div class="quote-news">
         <div class="quote-icon-wrapper">
           <svg class="quote-icon">
-            <use href="../img/icons/sprites.svg#dumbbell"></use>
+            <use href="./img/icons/sprites.svg#dumbbell"></use>
           </svg>
         </div>
         <div class="quote-news-wraper">
