--- a/src/partials/favorite.html
+++ b/src/partials/favorite.html
@@ -3,7 +3,7 @@
     <h1 class="favorites-tittle">Favorites</h1>
 
     <div class="favorites-thumb">
-      <div class="quote-conteiner">
+      <div class="quote-continer">
         <div class="favorites-quote">
           <svg class="man-svg" width="34" height="32">
             <use href="./img/icons/sprites.svg#icon-icon"></use>
@@ -38,7 +38,6 @@
               </div>
             </div>
           </div>
-
           <img
             class="favorites-img"
             srcset="
@@ -69,3 +68,5 @@
     </div>
   </section>
 </main>
+<script type="module" src="./js/favorite.js"></script>
+
