--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -19,7 +19,6 @@
       </div>
     </div>
 
-    <!-- Вибір зображення для різних екранів -->
     <div class="HeroImage">
       <picture>
         <source
@@ -82,5 +81,5 @@
     </div>
   </section>
 
-  <!-- <script type="module" src="./js/hero.js"></script> -->
+  <script type="module" src="./js/hero.js"></script>
 </body>
