--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -10,6 +10,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 20px;
+  padding-top: 0;
   background-color: #f4f4f9;
   text-align: center;
 }
