--- a/src/partials/quotes.html
+++ b/src/partials/quotes.html
@@ -31,6 +31,29 @@
     <div class="exercises-md-col-5  exercises-xl-col-12">
       <div class="quote-image">
         <picture class="quote-image-img">
+          <!-- Desktop -->
+          <source media="(min-width: 1440px)" srcset="
+                    ./img/quote/desktop-1x.webp 1x,
+                    ./img/quote/desktop-2x.webp 2x,
+                    ./img/quote/desktop-3x.webp 3x
+                  " type="image/webp" />
+          <source media="(min-width: 1440px)" srcset="
+                    ./img/quote/desktop-1x.jpg 1x,
+                    ./img/quote/desktop-2x.jpg 2x,
+                    ./img/quote/desktop-3x.jpg 3x
+                  " />
+          <!-- Tablet -->
+          <source media="(min-width: 768px)" srcset="
+                    ./img/quote/tablet-1x.webp 1x,
+                    ./img/quote/tablet-2x.webp 2x,
+                    ./img/quote/tablet-3x.webp 3x
+                  " type="image/webp" />
+          <source media="(min-width: 768px)" srcset="
+                    ./img/quote/tablet-1x.jpg 1x,
+                    ./img/quote/tablet-2x.jpg 2x,
+                    ./img/quote/tablet-3x.jpg 3x
+                  " />
+
           <!-- Mobile -->
           <source srcset="
           ./img/quote/mobile-1x.webp 1x,
@@ -42,29 +65,8 @@
           ./img/quote/mobile-2x.jpg 2x,
           ./img/quote/mobile-3x.jpg 3x
         " />
-          <!-- Tablet -->
-          <source media="(min-width: 768px)" srcset="
-          ./img/quote/tablet-1x.webp 1x,
-          ./img/quote/tablet-2x.webp 2x,
-          ./img/quote/tablet-3x.webp 3x
-        " type="image/webp" />
-          <source media="(min-width: 768px)" srcset="
-          ./img/quote/tablet-1x.jpg 1x,
-          ./img/quote/tablet-2x.jpg 2x,
-          ./img/quote/tablet-3x.jpg 3x
-        " />
-          <!-- Desktop -->
-          <source media="(min-width: 1200px)" srcset="
-          ./img/quote/desktop-1x.webp 1x,
-          ./img/quote/desktop-2x.webp 2x,
-          ./img/quote/desktop-3x.webp 3x
-        " type="image/webp" />
-          <source media="(min-width: 1200px)" srcset="
-          ./img/quote/desktop-1x.jpg 1x,
-          ./img/quote/desktop-2x.jpg 2x,
-          ./img/quote/desktop-3x.jpg 3x
-        " />
-          <img src="./img/quote/mobile-1x.jpg" alt="women sportswear taking break from workout" loading="lazy" />
+
+          <img src="./img/quote/desktop-1x.jpg" alt="women sportswear taking break from workout" loading="lazy" />
         </picture>
       </div>
     </div>
